getUsersPaginated
